emi support: alchemy, aspection, empowerment, inventor
Took 5 hours 30 minutes